fix(enroll test): fix style at btn_wrap

--- a/src/app/enroll-test/step/step.component.scss
+++ b/src/app/enroll-test/step/step.component.scss
@@ -7,7 +7,7 @@
     
     ::ng-deep {
       mat-step-header {
-        pointer-events: none;
+        //pointer-events: none;
       }
       
       .mat-horizontal-content-container {
@@ -220,8 +220,9 @@
     }
     
     .btn_wrap {
-      position: absolute;
-      bottom: 48px;
+      //position: absolute;
+      //bottom: 48px;
+      margin-top: 16px;
       margin-left: auto;
       margin-right: auto;
       left: 0;
